# bsponmpi

./: CHECKLIST  CMakeLists.txt  Doxyfile.in  LICENSE  README  bsp.h  bspcc.in  bsponmpi.spec.in  bsprun.in  build_tests.sh.in  configure
cmake/: has_cxx11_unordered_map.cc  has_tr1_unordered_map.cc  latex_test.tex  post-install-check.cmake.in
cmake/test-cmake-project/: CMakeLists.txt  hello.c
include/: bsc.h  bsp.h
man/: bspcc.1  bsprun.1
man/man1/: bompiprobe.1  bspcc.1  bsprun.1
src/: .spmd.cc.swp  .spmd.h.swp  a2a.cc  a2a.h  a2a.t.cc  aligned_buf.h  bompiprobe.c  bsc.c  bsmp.cc  bsmp.h  bsp.cc  config.h  dllexport.h  exception.h  lincost.cc  lincost.h  mpihelp.h  mpisizet.h  rdma.cc  rdma.h  spmd.cc  spmd.h  tictoc.cc  tictoc.h  uintserialize.h  uintserialize.t.cc  unbuf.cc  unbuf.h  unbuf.t.cc  util.c  util.h  util.t.c
test/: abort.1.fail.c  abort.2.fail.c  abort_1.c  abort_2.c  begin.1.fail.c  begin_1.c  bsc_allgather_neighbour.c  bsc_allreduce_qtree_root_p.c  bsc_alltoall_neighbour.c  bsc_bcast_2phase.c  bsc_bcast_qtree_q3.c  bsc_bcast_qtree_qp.c  bsc_combis.c  bsc_gather_neighbour.c  bsc_gather_partition.c  bsc_reduce_qtree_q3.c  bsc_scan_3tree.c  bsc_scatter_neighbour.c  bsc_scatter_partition.c  bsc_sync_crit_sect.c  bsc_sync_ring_comm.c  bsc_sync_ring_comm_with_gaps.c  bsc_sync_ring_double_comm_with_gaps.c  bsc_sync_stationary.c  bsc_sync_text_unaligned.c  bsc_sync_text_unaligned_unflushed.c  default_tagsize_1.c  get_1.c  get_2.c  get_3.c  get_4.c  get_5.c  get_6.c  get_tag_spmd.c  get_tag_status_null.c  get_tag_tag_null.c  hpget_1.c  hpmove_payloadptr_null.c  hpmove_queue_empty.c  hpmove_spmd.c  (+85 more)
